<resources>
    <string name="app_name">HappiReshipi</string>
    <string name="recipes_filename">recipes.json</string>
    <string name="error_loading_recipes">Error loading recipes</string>
    <string name="shopping_list_icon">Shopping list icon</string>
    <string name="dish_image">Dish Image</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="minus_symbol">-</string>
    <string name="plus_symbol">+</string>
    <string name="portions_number_input">1</string>
    <string name="add_button_text">Dodaj</string>
    <string name="images_directory">images/</string>
    <string name="error_loading">Error loading </string>
    <string name="details_ingredients">Składniki:</string>
    <string name="details_preparing">Przygotowanie:</string>
    <string name="details_recipe_name">Recipe Name</string>
    <string name="details_close_button">X</string>
    <string name="details_recipe_steps">Recipe</string>
    <string name="details_ingredient_amount">amount</string>
    <string name="details_ingredient_unit">unit</string>
    <string name="details_ingredient">ingredient</string>
    <string name="chosen_dishes">Wybrane dania</string>
    <string name="dish">Danie</string>
    <string name="portions">Porcje</string>
    <string name="ingredients">Składniki</string>
</resources>