...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E5DBBF">

    <TextView
        android:id="@+id/RecipeDetailIngredientAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_ingredient_amount"
        android:textColor="#3E3425"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toEndOf="@+id/RecipeDetailIngredientAmount"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/RecipeDetailIngredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/details_ingredient"
        android:textColor="#3E3425"
        android:textSize="20sp"
...
